[package]
name = "dice_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serenity = { version="0.11.5", default-features = false, features = ["utils","client", "gateway", "rustls_backend", "model", "unstable_discord_api", "collector"]}
tokio = { version="1.0", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.3.16"